# bs_ue_2017

./: README.md
ex01/: Makefile  btree  btree.c  btree.h  btree_output.txt  btree_test.c  testvector
ex01-1/: Makefile  btree  btree.c  btree.h  btree_test.c  testvector
ex02/: back_up.sh  ex02.md
ex03/: scheduling task.ods
ex04/: Makefile  task1  task1.c  task2  task2.c  task3  task3.c  task4  task4.c
ex04-1/: task1  task1.c  task2  task2.c  task3  task3.c
ex05/: Makefile  logreader  logreader.c  lsgrep  lsgrep.c  sender  sender.c
ex06/: task1  task1.c  task1a  task1a.c  task3.txt
exam1/: init.sh  peter  peter.c  student  student.c
exam2/: Makefile  README.md  bs_exam2_task2.c  bs_exam2_task2.h  main  main.c
os/1/: Makefile  README.md  btree.c  btree_test.c  testvector
os/2/: Task1_Script1.sh  Task1_Script2.sh  Task1_Script3.sh  my_back_up.sh
os/4/: CMakeLists.txt  task1.c  task2.c  task2.txt  task3.c  task4.c
os/5/: CMakeLists.txt  run.sh  task1_logger  task1_logger.c  task1_service  task1_service.c  task2  task2.c
os/6/: CMakeLists.txt  task1_creator.c  task1_worker.c  task2_creator.c  task2_worker.c  task3.txt  task4_creator.c  task4_worker.c
tmp/: btree.c
